tests/sumo/output/e1Instant/errors/pos_false/errors.sumo
Error: Attribute 'pos' in definition of instantInductionLoop '4/1to3/1' is not of type float.
Quitting (on error).
